--- a/paypersecond.html
+++ b/paypersecond.html
@@ -26,7 +26,14 @@
                 });
                 priceElement.innerHTML = Math.round(pricePerSecond * totalDuration * 100) / 100;
             }
-            payPerSecond.init({ video: {id: 1, url: 'TFR-AZALIA-3-2.mp4', type: 'video/mp4', thumb: {url: 'TFR-AZALIA-3-2-thumb.mp4', type: 'video/mp4'}, startTimecode: '02:30:05'}, onStateChange: calculatePrice });
+            payPerSecond.init({
+                video: {id: 1, url: 'TFR-AZALIA-3-2.mp4', type: 'video/mp4', thumb: {url: 'TFR-AZALIA-3-2-thumb.mp4', type: 'video/mp4'}, startTimecode: '02:30:05'},
+                slices: [
+                    {id: "792fe7bb-917e-462e-961d-bcd6da4e8b9e", offset: 2.6712, duration: 3.020853, videoId: 1, status: "new"},
+                    {id: "471eb386-02a9-496e-83b0-5780a7c1f4a7", offset: 6.65347, duration: 2.268540999999999, videoId: 1, status: "new"}
+                ],
+                onStateChange: calculatePrice
+            });
             // payPerSecond.init({ video: {
             //     id: 1,
             //     url: 'https://producerslibrary.s3.amazonaws.com/video/preview/CRV-0067_020.mov?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJJZ5JU2UITQKU5AA%2F20180207%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20180207T193142Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Signature=95c1769d462633d5b904dd5e90cb975cd003fa4364ae6ce39ea685e71a34f57d',
