IE white frames

--- a/paypersecond.html
+++ b/paypersecond.html
@@ -27,7 +27,7 @@
                 priceElement.innerHTML = Math.round(pricePerSecond * totalDuration * 100) / 100;
             }
             payPerSecond.init({
-                video: {id: 1, url: 'TFR-AZALIA-3-2.mp4', type: 'video/mp4', thumb: {url: 'TFR-AZALIA-3-2.mp4', type: 'video/mp4'}, /*startTimecode: '02:30:05'*/},
+                video: {id: 1, url: 'TFR-AZALIA-3-2.mp4', type: 'video/mp4', thumb: {url: 'TFR-AZALIA-3-2-thumb.mp4', type: 'video/mp4'}, /*startTimecode: '02:30:05'*/},
                 slices: [
                     {id: "792fe7bb-917e-462e-961d-bcd6da4e8b9e", offset: 2.6712, duration: 3.020853, videoId: 1, status: "new"},
                     {id: "471eb386-02a9-496e-83b0-5780a7c1f4a7", offset: 6.65347, duration: 2.268540999999999, videoId: 1, status: "new"}
